# django-app-example

./: Dockerfile.conda  Dockerfile.conda-multistage  Dockerfile.poetry  Dockerfile.requirements  README.md  environment.yml  pyproject.toml  requirements.txt
app/: healthcheck.py  settings.py  urls.py
infrastructure/: app.yaml  ingress.yaml  service.yaml
